--- a/templates/senior_staff_form.html
+++ b/templates/senior_staff_form.html
@@ -46,6 +46,18 @@
                     $("#preference_count").val(0);
                 }
             });
+
+             // Handle the marriage Status radio buttons
+             $("input[name='marital_status']").on('change', function() {
+                if ($(this).val() === 'married') {
+                    $("#marriage_input_div").show();
+                } else {
+                    $("#marriage_input_div").hide();
+                }
+            });
+    
+            // Initially hide the marriage input field
+            $("#marriage_input_div").hide();
         });
         
     </script>
@@ -130,12 +142,12 @@
                 </div>
 
                 
-                <!-- Section 3: Marital Information -->
+                <!-- Section 4: Marital Information -->
                 <div class="tab-pane fade" id="marital-info">
-                    <h3>Section 3: Marital Information</h3>
+                    <h3>Section 4: Marital Information</h3>
                     <div class="form-group">
                         <label for="marital_status">Marital Status</label><br>
-                        <input type="radio" id="married" name="marital_status" value="married">
+                        <input type="radio" id="married" name="marital_status" value="married" {% if form.married.value %}checked{% endif %}>
                         <label for="married">Married</label>
                 
                         <input type="radio" id="single" name="marital_status" value="single">
@@ -143,6 +155,10 @@
                 
                         <input type="radio" id="none" name="marital_status" value="none">
                         <label for="none">None</label>
+                    </div>
+                    <div id="marriage_input_div" class="form-group">
+                        <label for="marriage_input">Spouse ID:</label>
+                        <input type="text" id="marriage_input" name="marriage_input" value="{{ form.marriage_input.value }}">
                     </div>
                     
                     <button type="button" class="btn btn-secondary previous-section" data-previous="duty-info-tab">Previous</button>
