--- a/static/css/all_users.css
+++ b/static/css/all_users.css
@@ -3,14 +3,23 @@ body {
     margin: 0;
     padding: 20px;
     background-color: #f5f5f5;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
 }
 h2 {
     text-align: center;
     margin-bottom: 20px;
     color: #333;
+}
+.wrapper{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    /* padding-left: 450px; */
+  }
+
+.wrapper .all_users{
+    position: absolute;
+    top: 10%;
+    left: 20%;
 }
 .search-container {
     margin-right: 20px;
