--- a/static/css/pref.css
+++ b/static/css/pref.css
@@ -3,14 +3,18 @@ body {
     margin: 0;
     padding: 20px;
     background-color: #f5f5f5;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
+    /* align-items: space-between; */
   }
   h2 {
     text-align: center;
     margin-bottom: 20px;
     color: #333;
+  }
+  .wrapper{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 5px 0 0 450px;
   }
   .search-container {
     margin-right: 20px;
@@ -24,7 +28,7 @@ body {
     width: 200px;
   }
   .table-container {
-    flex-grow: 0;
+    flex-grow: 1;
     margin-left: -20px;
   }
   .print-container {
