--- a/static/css/side.css
+++ b/static/css/side.css
@@ -1,6 +1,6 @@
 /* Sidebar styling */
 .sidebar {
-    width: 270px; 
+    width: 18vw; 
     height: 100vh;
     position: fixed;
     top: 0;
@@ -10,7 +10,7 @@
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     color: white;
     font-family: Arial, sans-serif;
-    z-index: 1000; /* Ensure sidebar stays on top */
+    z-index: 1000; 
 }
 
 .sidebar h3 {
@@ -25,8 +25,16 @@
 }
 
 .sidebar ul li {
+    background: #fff;
+    padding: 15px;
     margin: 10px 0;
-    width: 88%;
+    border-radius: 0px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 600px;
+    width: 90%;
 }
 
 .sidebar ul li a {
